# WebScout

./: IMPLEMENTATION_PLAN.md  Phase-2-Core-Infrastructure.md  Phase-4-API-Routes.md  Phase-5-Dashboard-UI.md  Phase-6-Demo-Deployment.md  README.md  weavehacks_multi_sponsor_ideas.md  weavehacks_project_ideas.md
demo-video/: .gitignore  package-lock.json  package.json
demo-video/src/: Composition.tsx  Root.tsx  animations.ts  styles.ts
demo-video/src/scenes/: AdaptiveSystemScene.tsx  ClosingScene.tsx  HeroScene.tsx  LearningLoopScene.tsx  PatternFitnessScene.tsx  ProofScene.tsx  SponsorStackScene.tsx  WeaveDeepDiveScene.tsx
implematations /: Phase-1-Project-Scaffolding.md  Phase-3-Learning-Scraper-Engine.md
watch-and-learn-main/: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  james-mongoDB-voyageAI.md
watch-and-learn-main/demo/: description.txt  prompt.txt
watch-and-learn-main/services/nextjs-webapp/: Dockerfile  next.config.js  (+2 more)
watch-and-learn-main/services/python-agent/: Dockerfile  agent.py  config.py  main.py  mcp_client.py  models.py  prompts.py  pyproject.toml  rag_retriever.py  recording_models.py  recording_storage.py  requirements.txt  voyage_service.py
watch-and-learn-main/voyageai-chat/: .env.example  main.py  requirements.txt
webscout/: .env.example  .gitignore  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  vercel.json
webscout/scripts/: long-running-test.sh  regression-test.sh  test_all_features.py  test_edge_cases.py  test_redis_cloud.py  verify-gemini.js  weave_evaluation.py
(+145 files in other folders)
