[project]
name = "watch-and-learn-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.rules]
# Ignore unresolved imports since dependencies are installed in Docker container
unresolved-import = "ignore"
